apply fix to wysiwyg editor popover due to lower z-index

--- a/css/back_styles.css
+++ b/css/back_styles.css
@@ -64,3 +64,4 @@ h2.heading, div.heading {
     padding:20px;
 }
 .alignRight { text-align:right; }
+.wp-admin .mce-floatpanel.mce-popover { z-index:999999 !important; }
